<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="#FFFFFF"
    android:elevation="8dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="10">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/iphone11" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/productNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/productname"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/productTotalPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/price"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <TextView
                    android:id="@+id/textViewQTY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Quantity:"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/quantitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:entries="@array/quantity_string_array"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                <!--Wide space-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteProductButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

</LinearLayout>

