<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_top"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/abc_vector_test" />

        </LinearLayout>

        <Button
            android:id="@+id/save"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="-26dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_button_oval"
            android:text="@string/save_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title" />

                    <EditText
                        android:id="@+id/profileName"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_title" />

                    <EditText
                        android:id="@+id/profilePhone"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_email_orange" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title" />

                    <EditText
                        android:id="@+id/profileEmail"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:enabled="false"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_title" />

                    <EditText
                        android:id="@+id/profileAddress"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/back_id"
                style="@style/TextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/bg_button_oval"
                android:text="Go Back" />

        </LinearLayout>

        <TextView
            android:id="@+id/label1_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Click to View Purchase/Order History"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_purchaseHistory_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff222"
            tools:listitem="@layout/list_item_order_view_row" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>